feat: implement core system architecture including MVC components, DAO layers, and initial UI screens